@@ -34,7 +34,6 @@ import java.util.*;
 public abstract class AbstractChange extends AbstractPlugin implements Change {
 
     protected static final String NODENAME_COLUMN = "column";
-    private ResourceAccessor resourceAccessor;
 
     private ChangeSet changeSet;
 
@@ -507,18 +506,16 @@ public abstract class AbstractChange extends AbstractPlugin implements Change {
 
     /**
      * @inheritDoc
+     * @deprecated Should get from {@link Scope}
      */
     @DatabaseChangeProperty(isChangeProperty = false)
     public ResourceAccessor getResourceAccessor() {
-        return resourceAccessor;
+        return Scope.getCurrentScope().getResourceAccessor();
     }
 
-    /**
-     * {@inheritDoc}
-     */
     @Override
     public void setResourceAccessor(ResourceAccessor resourceAccessor) {
-        this.resourceAccessor = resourceAccessor;
+        Scope.getCurrentScope().getLog(getClass()).info("As of Liquibase 4.0, cannot set resource accessor on "+getClass().getName()+". Must add it to the Scope");
     }
 
     /**
@@ -591,7 +588,7 @@ public abstract class AbstractChange extends AbstractPlugin implements Change {
     @Override
     public void load(ParsedNode parsedNode, ResourceAccessor resourceAccessor) throws ParsedNodeException {
         ChangeMetaData metaData = Scope.getCurrentScope().getSingleton(ChangeFactory.class).getChangeMetaData(this);
-        this.setResourceAccessor(resourceAccessor);
+
         try {
             Collection<ChangeParameterMetaData> changeParameters = metaData.getParameters().values();
 
@@ -637,7 +634,7 @@ public abstract class AbstractChange extends AbstractPlugin implements Change {
                             && (!collectionType.isInterface())
                             && (!Modifier.isAbstract(collectionType.getModifiers()))
                         ) {
-                            String elementName = ((LiquibaseSerializable) collectionType.newInstance())
+                            String elementName = ((LiquibaseSerializable) collectionType.getConstructor().newInstance())
                                 .getSerializedObjectName();
                             List<ParsedNode> nodes = new ArrayList<>(
                                  parsedNode.getChildren(null, param.getParameterName())
@@ -664,13 +661,13 @@ public abstract class AbstractChange extends AbstractPlugin implements Change {
                                     if ((childNodes != null) && !childNodes.isEmpty()) {
                                         for (ParsedNode childNode : childNodes) {
                                             LiquibaseSerializable childObject =
-                                                (LiquibaseSerializable)collectionType.newInstance();
+                                                (LiquibaseSerializable)collectionType.getConstructor().newInstance();
                                             childObject.load(childNode, resourceAccessor);
                                             ((Collection) param.getCurrentValue(this)).add(childObject);
                                         }
                                     } else {
                                         LiquibaseSerializable childObject =
-                                            (LiquibaseSerializable) collectionType.newInstance();
+                                            (LiquibaseSerializable) collectionType.getConstructor().newInstance();
                                         childObject.load(node, resourceAccessor);
                                         ((Collection) param.getCurrentValue(this)).add(childObject);
                                     }
@@ -686,11 +683,11 @@ public abstract class AbstractChange extends AbstractPlugin implements Change {
                             ParsedNode child = parsedNode.getChild(null, param.getParameterName());
                             if (child != null) {
                                 LiquibaseSerializable serializableChild =
-                                    (LiquibaseSerializable) param.getDataTypeClass().newInstance();
+                                    (LiquibaseSerializable) param.getDataTypeClass().getConstructor().newInstance();
                                 serializableChild.load(child, resourceAccessor);
                                 param.setValue(this, serializableChild);
                             }
-                        } catch (InstantiationException|IllegalAccessException e) {
+                        } catch (ReflectiveOperationException e) {
                             throw new UnexpectedLiquibaseException(e);
                         }
                     }
@@ -704,7 +701,7 @@ public abstract class AbstractChange extends AbstractPlugin implements Change {
                     param.setValue(this, childValue);
                 }
             }
-        } catch (InstantiationException|IllegalAccessException e) {
+        } catch (ReflectiveOperationException e) {
             throw new UnexpectedLiquibaseException(e);
         }
         customLoadLogic(parsedNode, resourceAccessor);
@@ -716,8 +713,8 @@ public abstract class AbstractChange extends AbstractPlugin implements Change {
     }
 
     protected ColumnConfig createEmptyColumnConfig(Class collectionType)
-        throws InstantiationException, IllegalAccessException {
-        return (ColumnConfig) collectionType.newInstance();
+        throws ReflectiveOperationException {
+        return (ColumnConfig) collectionType.getConstructor().newInstance();
     }
 
     protected void customLoadLogic(ParsedNode parsedNode, ResourceAccessor resourceAccessor)
